# Thanatos

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: logging.conf
infra/docker/: Dockerfile.local_llm  Dockerfile.ollama
services/local_llm/: adapter_server.py  ollama_client.py  prompt_builder.py  tool_parser.py
shared/: constants.py  deepseek_planner.py  logging_setup.py  settings.py  utils.py
shared/models/: __init__.py  agent_event.py  tool_definition.py  tool_result.py
tests/debug/: debug_planner.py
tests/integration/: test_planner.py
